fixing react-tiny-popover-container z-index

--- a/src/styles/base/components/popover.scss
+++ b/src/styles/base/components/popover.scss
@@ -1,6 +1,6 @@
 @import "../../abstracts/index";
 
-.react-tiny-popover-container {
+#react-tiny-popover-container {
   z-index: var(--z-index-popover);
 }
 
